--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,3 @@
-
-    
-
     <% if current_user.booked_spaceships.count == 0 %>
       
       <div class="container push-footer">
@@ -13,67 +10,31 @@
         </div>
       </div>
 
-
-
     <% else %>
 
       <div class="container push-footer">
         <h1 class="hello">Hello, <%= current_user.email_or_first_name %> this is your booking summary</h1>
-        <div class="row">   
-          <div class="col-md-12">
 
-            <p>Start date: <%= booking.start_date%> End date: <%= booking.end_date %></p>
-          </div>  
-          <div class="new-name-here">
-            <p class="model">Model: <%= booking.spaceship.model %></p>
-            <h4 class="model">Ship details :</h4>
-            <p class="model">This ship has a capacity of <%= booking.spaceship.capacity %>. Its location is <%= booking.spaceship.location %> The captain of the ship is <%= booking.spaceship.captain_name %>.</p>
-          </div>
-          <h2>Total: <%= (booking.end_date - booking.start_date).to_i * booking.spaceship.cost %></h2>
-        <% end %>
-         
-      </div>            
-    </div>
-  </div>
-</div>  
-      <div>
-        <h2>Booked Spaceships</h2>
         <div class="row">
-          <% current_user.booked_spaceships.each do |spaceship| %>
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-12">
-              <div class="card">
-                <p>Model: <%= spaceship.model %></p>
-                <h4>Ship details :</h4>
-                <p>
-                  This ship has a capacity of <%= spaceship.capacity %>.
-                  Its location is <%= spaceship.location %>.
-                  The captain of the ship is <%= spaceship.captain_name %>.
-                </p>
-              </div>
+          <% current_user.bookings.each do |booking| %>
+
+            <div class="col-md-12">
+              <p>Start date: <%= booking.start_date%> End date: <%= booking.end_date %></p>
+            </div>  
+
+            <div class="new-name-here">
+              <p class="model">Model: <%= booking.spaceship.model %></p>
+              <h4 class="model">Ship details :</h4>
+              <p class="model">This ship has a capacity of <%= booking.spaceship.capacity %>. Its location is <%= booking.spaceship.location %> The captain of the ship is <%= booking.spaceship.captain_name %>.</p>
+            </div>
+
+            <h2>Total: <%= (booking.end_date - booking.start_date).to_i * booking.spaceship.cost %></h2>
+
+            <div>
+              <%= link_to "Delete booking", booking_path(booking), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
             </div>
           <% end %>
-        </div>
-
-                <div class="new-name-here">
-                  <p class="model">Model: <%= booking.spaceship.model.capitalize %></p>
-                  <h4 class="model">Ship details :</h4>
-                  <p class="model">This ship has a capacity of <%= booking.spaceship.capacity %>. Its location is <%= booking.spaceship.location %> The captain of the ship is <%= booking.spaceship.captain_name %>.</p>
-                </div>
-
-                <h2>Total:</h2>
-                <%= link_to "Delete booking", booking_path(booking), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
-              <% end %>
-            </div>            
-          </div>
-        </div>
-      </div>
+      </div>            
     <% end %>
 
-<!-- <div class="footer-new text-center">
-  <div class="links">
-    <a href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
-    <a href="https://github.com/arturkonopka1994/airnspace"><i class="fab fa-fw fa-github"></i></a>
-    <a href="https://twitter.com/"><i class="fab fa-fw fa-twitter"></i></a>
-    <a href="https://www.instagram.com/"><i class="fab fa-fw fa-instagram"></i></a>
-    <p>This website was coded by Artur, Matt, Rida & Francois <i class="fas fa-space-shuttle"></i></p>
-</div> -->
+
